--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/router": "~10.1.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
