--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.2",
-    "@angular/common": "~10.1.2",    
     "@angular/cli": "~10.1.2",
-    "@angular/compiler-cli": "~10.1.2",
+    "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
+    "@angular/compiler-cli": "~10.1.2",
     "@angular/core": "~10.1.2",
     "@angular/forms": "~10.1.2",
     "@angular/platform-browser": "~10.1.2",
@@ -32,6 +32,7 @@
     "jquery": "^3.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
+    "ng2-completer": "^9.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
